--- a/parsing_applications/release/parsing_applications.json
+++ b/parsing_applications/release/parsing_applications.json
@@ -1,5 +1,5 @@
 {
-  "parsing_applications_version": 7,
+  "parsing_applications_version": 8,
   "parsing_applications": [
     {
       "parsing_app_name": "app_router",
@@ -55,7 +55,7 @@
     },
     {
       "parsing_app_name": "linux-syslog",
-      "parsing_app_version": 2,
+      "parsing_app_version": 3,
       "parsing_app_author": "siembol",
       "parsing_app_description": "linux syslog parsing application",
       "parsing_app_settings": {
@@ -70,12 +70,90 @@
         "output_parallelism": 1,
         "parse_metadata": false,
         "max_num_fields": 300,
-        "max_field_size": 40000
+        "max_field_size": 40000,
+        "original_string_topic": "linux-syslog"
       },
       "parsing_settings": {
         "single_parser": {
           "output_topic": "siembol.enrichment",
           "parser_name": "linux-syslog"
+        }
+      }
+    },
+    {
+      "parsing_app_name": "aws_cloudtrail",
+      "parsing_app_version": 3,
+      "parsing_app_author": "siembol",
+      "parsing_app_description": "AWS cloudtrail parsing application",
+      "parsing_app_settings": {
+        "parsing_app_type": "single_parser",
+        "input_topics": [
+          "aws.cloudtrail"
+        ],
+        "error_topic": "siembol.indexing",
+        "num_workers": 1,
+        "input_parallelism": 1,
+        "parsing_parallelism": 1,
+        "output_parallelism": 1,
+        "parse_metadata": false,
+        "max_num_fields": 300,
+        "max_field_size": 40000,
+        "original_string_topic": "aws.cloudtrail"
+      },
+      "parsing_settings": {
+        "single_parser": {
+          "output_topic": "siembol.enrichment",
+          "parser_name": "aws_cloudtrail"
+        }
+      }
+    },
+    {
+      "parsing_app_name": "siembol_heartbeat",
+      "parsing_app_version": 1,
+      "parsing_app_author": "siembol",
+      "parsing_app_description": "Siembol heartbeat parsing application",
+      "parsing_app_settings": {
+        "parsing_app_type": "single_parser",
+        "input_topics": [
+          "siembol.heartbeat"
+        ],
+        "error_topic": "siembol.indexing",
+        "num_workers": 1,
+        "input_parallelism": 1,
+        "parsing_parallelism": 1,
+        "output_parallelism": 1,
+        "parse_metadata": false,
+        "max_num_fields": 300,
+        "max_field_size": 40000
+      },
+      "parsing_settings": {
+        "single_parser": {
+          "output_topic": "siembol.enrichment",
+          "parser_name": "siembol_heartbeat"
+        }
+      }
+    },
+    {
+      "parsing_app_name": "win_eventlogs",
+      "parsing_app_version": 2,
+      "parsing_app_author": "siembol",
+      "parsing_app_description": "Windows eventlogs parsing application",
+      "parsing_app_settings": {
+        "parsing_app_type": "single_parser",
+        "input_topics": [
+          "win.eventlogs"
+        ],
+        "error_topic": "siembol.indexing",
+        "num_workers": 1,
+        "input_parallelism": 1,
+        "parsing_parallelism": 1,
+        "output_parallelism": 1,
+        "parse_metadata": false
+      },
+      "parsing_settings": {
+        "single_parser": {
+          "output_topic": "siembol.enrichment",
+          "parser_name": "win_eventlogs"
         }
       }
     }
